[package]
name = "postgres-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.8.0", features = ["attributes"]}
#futures = "0.3"
sqlx = { version = "0.3.5", features = [ "postgres" ]}
anyhow = "1.0"